# quickinsight_library

./: .bandit  .gitignore  .pre-commit-config.yaml  .pypirc.template  COMMANDS.md  CONTRIBUTING.md  INTEGRATION_PLAN.md  OPTIMIZATION_ROADMAP.md  PROJECT_STRUCTURE.md  PYPI_RELEASE_GUIDE.md  README.md  RELEASE_NOTES_v0.2.0.md  SPRINT2_COMPLETION_SUMMARY.md  ecure API key storage and deployment automation - API keys stored in .env file, deployment script created, requirements updated  h origin main  publish_to_pypi.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security-scan.yml  tests.yml
docs/: API_REFERENCE.md
examples/: acceleration_demo.py  advanced_analysis_example.py  basic_usage.py  full_demo.py  holographic_demo.py  neural_demo.py  performance_benchmarks.py  quantum_demo.py  quick_start_example.py  showcase_basic.py
scripts/: deploy.py  deploy_to_pypi.py  performance_testing.py
src/quickinsights/: __init__.py  acceleration.py  ai_insights.py  ai_insights_optimized.py  anomaly_explain.py  automl_v2.py  automl_v2_optimized.py  big_data.py  cloud_integration.py  core.py  core_optimized.py  creative_viz.py  dashboard_optimized.py  dask_integration.py  data_validation.py  drift_cli.py  easy_start.py  error_handling.py  fairness.py  federated.py  few_shot.py  generative.py  holographic_viz.py  model_selection.py  multimodal.py  neural_patterns.py  neuro_symbolic.py  pandas_integration.py  performance.py  performance_baseline.py  quantum_insights.py  quick_insights.py  realtime_pipeline.py  smart_cleaner_optimized.py  utils.py  utils_optimized.py  visualizer.py  visualizer_optimized.py
src/quickinsights/analysis/: basic_analysis.py
tests/: __init__.py  conftest.py  requirements-test.txt  simple_test_suite.py  test_integration_security_performance.py  test_quickinsights.py  test_security.py
tests/test_output/: improved_test_results.json  simple_test_results.json
